<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MetaWalletCallExample</string>
    <string name="nav_header_title">MetaWallet Deeplink Example</string>
    <string name="nav_header_subtitle">dev@inblock.co</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="transfer">Transfer</string>
    <!-- Strings used for fragments for navigation -->

    <string name="menu_slideshow">Slideshow</string>
    <string name="metawallet_not_found">MetaWallet not found</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="cancel_by_user">Cancel by user</string>
    <string name="result">Result</string>
    <string name="result_code">Result Code</string>
    <string name="txid">TXID</string>
    <string name="message">Message</string>
    <string name="execute">Execute</string>
    <string name="network">NetWork</string>
    <string name="mainnet">Mainnet</string>
    <string name="testnet">Testnet</string>
    <string name="name">name</string>
    <string name="dappname_sample">DappName Sample</string>
    <string name="callbacktype">callbackType</string>
    <string name="receive_address">Receive Address</string>
    <string name="amount">Amount</string>
    <string name="result_success">RESULT_SUCCESS</string>
    <string name="result_cancel">RESULT_CANCELED</string>
    <string name="url">url</string>
    <string name="deeplink">deeplink</string>
    <string name="intent">intent</string>
    <string name="callback">callback</string>
    <string name="reqkey">reqKey</string>
    <string name="dummy_url">https://metacoin.network/img/common/og_share.png</string>
    <string name="icons">icons</string>
    <string name="address">Address</string>
    <string name="dummy_reqkey">reqKeySample</string>
    <string name="splitline">SplitLIne</string>
    <string name="metacoin_tokenid">0</string>
    <string name="token">Token</string>
    <string name="dummy_amount">5.3</string>
    <string name="dummy_address" tools:ignore="Typos">MTIuY8XnSKSerfzuYmLFZ5JYGFGoMzkc37134b27</string>
    <string name="tag">Tag</string>
    <string name="dummy_tag">DeepLinkTag</string>
    <string name="memo">Memo</string>
    <string name="dummy_memo">DeepLink Test Memo</string>
    <string name="topic">Topic</string>
    <string name="dummy_topic">딥링크를 이용한 결제 테스트 입니다. 5.3 MTC를 테스트넷에서 이체 합니다.</string>
    <string name="callresult">CallResult</string>
    <string name="any">Any</string>
    <string name="owner">Owner</string>
    <string name="generate">Generate</string>
    <string name="burn">Burn</string>
    <string name="create">Create</string>
    <string name="increase">Increase</string>
    <string name="update">Update</string>
    <string name="dummy_mrc402id">MRC402_9dcb4a7628c92dfdde497d91467e70550</string>
    <string name="duumy_platform_name">Hotdeal.io</string>
    <string name="duumy_platform_url">https://hotdeal.io</string>
    <string name="duumy_platform_commission">5</string>
    <string name="duumy_platform_address">MTIuY8XnSKSerfzuYmLFZ5JYGFGoMzkc37134b27</string>
    <string name="mint">Mint</string>
    <string name="auction">auction</string>
    <string name="bidding">Bidding</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="unauction">Auction cancel</string>
    <string name="unsell">Sell cancel</string>

</resources>