<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:gravity="center_vertical">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/app_btn_border"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/rdoMainnet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="0dp"
                android:text="@string/mainnet"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/rdoTestnet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/testnet"
                tools:ignore="TouchTargetSizeCheck" />

        </RadioGroup>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@color/white"
            android:contentDescription="@string/any"
            android:paddingHorizontal="5dp"
            android:text="@string/network"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:gravity="center_vertical">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/app_btn_border"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/rdoUrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/url"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/rdodeeplink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/deeplink"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/rdointent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/intent"
                tools:ignore="TouchTargetSizeCheck" />

        </RadioGroup>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@color/white"
            android:contentDescription="@string/any"
            android:paddingHorizontal="5dp"
            android:text="@string/callbacktype"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <co.inblock.metawalletcallexample.viewItem
        android:id="@+id/viAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:Item_label="@string/name"
        app:Item_value="@string/dappname_sample" />

    <co.inblock.metawalletcallexample.viewItem
        android:id="@+id/viAppCallback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:Item_label="@string/callback"
        app:Item_value="" />

    <co.inblock.metawalletcallexample.viewItem
        android:id="@+id/viAppReqKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:Item_label="@string/reqkey"
        app:Item_value="@string/dummy_reqkey" />

    <co.inblock.metawalletcallexample.viewItem
        android:id="@+id/viAppIcons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:Item_label="@string/icons"
        app:Item_value="@string/dummy_url" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:background="@color/black"
        android:contentDescription="@string/splitline" />

</LinearLayout>