<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MRC402MintFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btnAction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginVertical="5dp">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/app_btn_border"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/black"
                    android:weightSum="2"
                    app:layout_constraintHorizontal_weight="3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <RadioButton
                        android:id="@+id/rdoMainnet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="0dp"
                        android:text="@string/mainnet"
                        android:layout_weight="1"
                        tools:ignore="TouchTargetSizeCheck" />

                    <RadioButton
                        android:id="@+id/rdoTestnet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/testnet"
                        tools:ignore="TouchTargetSizeCheck" />

                </RadioGroup>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="@string/network"
                    android:layout_marginStart="20dp"
                    android:paddingHorizontal="5dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/any" />
            </androidx.constraintlayout.widget.ConstraintLayout>



            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginVertical="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/app_btn_border"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/black"
                    android:weightSum="3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <RadioButton
                        android:id="@+id/rdoUrl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/url"
                        tools:ignore="TouchTargetSizeCheck" />

                    <RadioButton
                        android:id="@+id/rdodeeplink"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/deeplink"
                        tools:ignore="TouchTargetSizeCheck" />

                    <RadioButton
                        android:id="@+id/rdointent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/intent"
                        tools:ignore="TouchTargetSizeCheck" />

                </RadioGroup>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="@string/callbacktype"
                    android:layout_marginStart="20dp"
                    android:paddingHorizontal="5dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/any" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <co.inblock.metawalletcallexample.viewItem
                android:id="@+id/viAppName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:Item_label="@string/name"
                app:Item_value="@string/dappname_sample" />

            <co.inblock.metawalletcallexample.viewItem
                android:id="@+id/viAppCallback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:Item_label="@string/callback"
                app:Item_value="" />

            <co.inblock.metawalletcallexample.viewItem
                android:id="@+id/viAppReqKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:Item_label="@string/reqkey"
                app:Item_value="@string/dummy_reqkey" />

            <co.inblock.metawalletcallexample.viewItem
                android:id="@+id/viAppIcons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:Item_label="@string/icons"
                app:Item_value="@string/dummy_url" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                android:background="@color/black"
                android:contentDescription="@string/splitline" />

            <co.inblock.metawalletcallexample.viewItem
                android:id="@+id/viOwner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:Item_label="@string/owner"
                app:Item_value="@string/mrc402owner" />

            <co.inblock.metawalletcallexample.viewItem
                android:id="@+id/viToken"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:Item_label="@string/token"
                app:Item_value="@string/mrc402id" />

            <co.inblock.metawalletcallexample.viewItem
                android:id="@+id/viAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:Item_label="@string/amount"
                app:Item_value="@string/dummy_amount" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                android:background="@color/black"
                android:contentDescription="@string/splitline" />

            <co.inblock.metawalletcallexample.viewItem
                android:id="@+id/viResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:Item_label="@string/result"
                app:Item_readonly="true" />

            <co.inblock.metawalletcallexample.viewItem
                android:id="@+id/viResultCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:Item_label="@string/result_code"
                app:Item_readonly="true" />

            <co.inblock.metawalletcallexample.viewItem
                android:id="@+id/viResultTXID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:Item_label="@string/txid"
                app:Item_readonly="true" />

            <co.inblock.metawalletcallexample.viewItem
                android:id="@+id/viResultMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:Item_label="@string/message"
                app:Item_readonly="true" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/increase"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>