<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:background="@color/black"
        android:contentDescription="@string/splitline" />

    <co.inblock.metawalletcallexample.viewItem
        android:id="@+id/viResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:Item_label="@string/result"
        app:Item_readonly="true" />

    <co.inblock.metawalletcallexample.viewItem
        android:id="@+id/viResultCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:Item_label="@string/result_code"
        app:Item_readonly="true" />

    <co.inblock.metawalletcallexample.viewItem
        android:id="@+id/viResultTXID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:Item_label="@string/txid"
        app:Item_readonly="true" />

    <co.inblock.metawalletcallexample.viewItem
        android:id="@+id/viResultMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:Item_label="@string/message"
        app:Item_readonly="true" />

</LinearLayout>