<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransferFragment">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/network" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rdoMainnet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mainnet" />

                    <RadioButton
                        android:id="@+id/rdoTestnet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/testnet" />
                </RadioGroup>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/edtName"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:text="@string/dappname_sample"
                    tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/callbacktype" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rdoUrl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/url" />

                    <RadioButton
                        android:id="@+id/rdodeeplink"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/deeplink" />

                    <RadioButton
                        android:id="@+id/rdointent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/intent" />

                </RadioGroup>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/edtCallback"
                    android:text="@string/callback" />

                <EditText
                    android:id="@+id/edtCallback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textUri"
                    tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/reqkey" />

                <EditText
                    android:id="@+id/edtReqKey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/dummy_reqkey"
                    android:importantForAutofill="no"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/icons" />

                <EditText
                    android:id="@+id/edtIcons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/dummy_url"
                    android:importantForAutofill="no"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/black"
                android:contentDescription="@string/splitline" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/result" />

                <TextView
                    android:id="@+id/txtResult"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/txtResultCode"
                    android:text="@string/result_code" />

                <EditText
                    android:id="@+id/txtResultCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:text=""
                    tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/txtResultAddress"
                    android:text="@string/address" />

                <EditText
                    android:id="@+id/txtResultAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:text=""
                    tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/txtResultMessage"
                    android:text="@string/message" />

                <EditText
                    android:id="@+id/txtResultMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:text=""
                    tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/execute"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>