<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MRC010BurnFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btnAction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/common"
                layout="@layout/common_appinfo_fragment"
                android:visibility="gone" />

            <co.inblock.metawalletcallexample.viewItem
                android:id="@+id/viOwner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:Item_require="true"
                app:Item_label="@string/owner"
                app:Item_value="@string/dummy_address" />

            <co.inblock.metawalletcallexample.viewItem
                android:id="@+id/viAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:Item_require="true"
                app:Item_label="@string/amount"
                app:Item_value="@string/dummy_amount" />

            <co.inblock.metawalletcallexample.viewItem
                android:id="@+id/viTokenID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:Item_require="true"
                app:Item_label="TokenID"
                app:Item_value="" />

            <include
                android:id="@+id/result"
                layout="@layout/common_result_fragment"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/burn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>